lsws/rgb2rgb: Add unscaled 48bit to 64bit rgb conversion.

Based on b4befca2 and 6b7849e6 by Paul B Mahol.

Fixes ticket #6608.